--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,9 +1,71 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archive des compétitions</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f90;
+        }
+
+        h1 {
+            color: #333;
+            padding: 20px 0;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0 auto;
+            width: 70%;
+            /* Largeur réduite */
+            max-width: 600px;
+            /* Largeur maximale */
+        }
+
+        li {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            color: #333;
+            margin-bottom: 10px;
+            font-size: 1.5rem;
+        }
+
+        p {
+            margin: 0;
+            color: #666;
+            margin-bottom: 10px;
+        }
+
+        a {
+            display: block;
+            text-align: center;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #fff;
+            color: #f90;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        a:hover {
+            background-color: #f9f9f9;
+        }
+    </style>
 </head>
 
 <body>
@@ -17,6 +79,7 @@
         </li>
         {% endfor %}
     </ul>
+    <a href="{{ url_for('index') }}">Retour à l'accueil</a>
 </body>
 
 </html>
